New lines added please check

--- a/studentevent.html
+++ b/studentevent.html
@@ -83,6 +83,9 @@
                     <div class="invalid-feedback">
                         Select any event from the list
                     </div>
+			   <div class="invalid-feedback">
+                        Select any event from the list
+                    </div>
                 </div>
 
                 <div class="mb-3 form-check">
